feat: adiciona botão de notificações, logout com alerta e visual novo na tela de intro

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -3,8 +3,7 @@
 	"appName": "Bater Ponto",
 	"webDir": "www",
 	"server": {
-		"androidScheme": "https",
-		"url": "http://192.168.1.102:8101"
+		"androidScheme": "https"
 	},
 	"plugins": {
 		"Camera": {
